# Rocket

./: Cargo.toml  tmp.md
.github/autobahn/: fuzzingclient.json
.github/workflows/: autobahn.yml
benchmarks/src/: routing.rs
contrib/dyn_templates/src/: fairing.rs  metadata.rs  template.rs
contrib/lib/: Cargo.toml
contrib/ws/src/: websocket.rs
core/codegen/: Cargo.toml
core/codegen/src/: exports.rs  http_codegen.rs  lib.rs  name.rs
core/codegen/tests/: async-routes.rs  catcher.rs  route-data.rs  route-raw.rs  route.rs  typed-uris.rs  typed_error.rs
core/http/: Cargo.toml
core/http/src/: hyper.rs  lib.rs  method.rs  status.rs
core/lib/: Cargo.toml
core/lib/src/: cookies.rs  erased.rs  error.rs  ext.rs  lib.rs  lifecycle.rs  log.rs  outcome.rs  phase.rs  rocket.rs  sentinel.rs  server.rs  state.rs  tungstenite.rs  websocket.rs
core/lib/tests/: catcher-cookies-1213.rs  drop-in-async-context.rs  file_server.rs  flash-lazy-removes-issue-466.rs  forward-includes-status-1560.rs  http_uri_serde.rs  (+4 more)
docs/guide/: 01-upgrading.md  05-requests.md  06-responses.md  07-state.md  12-pastebin.md  14-faq.md
examples/: Cargo.toml
examples/error-handling/: Cargo.toml
examples/websocket-auth/: Cargo.toml
examples/websocket-channels/: Cargo.toml
examples/websocket-channels-multiplex/: Cargo.toml
examples/websocket-echo/: Cargo.toml
examples/websocket_echo/: Cargo.toml
examples/websocket_echo/src/: main.rs
scripts/: mk-docs.sh  test.sh
site/guide/: 20-websockets.md  4-requests.md  5-responses.md  9-configuration.md
testbench/src/: server.rs
(+168 files in other folders)
